# cards

./: .config.toml  .gitignore  .isort.cfg  .ruff.toml  flake.nix  pyproject.toml  todo
python/: requirements.in  requirements.txt
python/cards/: __main__.py  api.py  backup.py  brainscape.py  cards.py  cli.py  config.py  data.py  dcs.py  documents.py  entries.py  itools.py  markdown.py  mochi.py  preview-template.html  preview.py  state.py  sync.py  tools.py
python/cards/data/: __init__.py  markdown.py  plain.py  rich.py
python/cards/data/plain/: documents.py  transform.py
python/cards/data/rich/: documents.py
python/cards/mochi/: api.py  deck.py  state.py
src/cards/: __main__.py  backup.py  cli.py  data.py  markdown.py  state.py  sync.py
